// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Fieldset /> CheckboxField story renders snapshot 1`] = `
<fieldset
  class="checkbox-field fieldset"
>
  <legend
    aria-describedby="6"
    class="fieldset-legend checkbox-field__label"
  >
    Checkbox field
     
  </legend>
  <div
    class="checkbox-field__body fieldset-items"
  >
    <ul
      class="checkbox-field__list"
    >
      <li
        class="checkbox-field__item"
      >
        <div
          class="checkbox-field__item-control checkbox"
        >
          <span
            class="input__wrapper"
          >
            <input
              class="checkbox__input"
              data-bootstrap-override="checkbox"
              id="7"
              name="checkbox-example"
              style="--checkbox-svg-size: 1.25rem;"
              type="checkbox"
              value="checkbox1"
            />
            <svg
              aria-hidden="true"
              height="1.25rem"
              viewBox="0 0 20 20"
              width="1.25rem"
            >
              <rect
                class="checkmark__outline"
                fill="none"
                height="18"
                rx="3"
                stroke="currentColor"
                stroke-width="2"
                width="18"
                x="1"
                y="1"
              />
              <use
                class="checkmark__content"
                fill="none"
                xlink:href="test-file-stub#check"
              />
            </svg>
          </span>
          <label
            class="label label--md"
            data-bootstrap-override="label"
            for="7"
            style="--checkbox-svg-size: 1.25rem;"
          >
            Checkbox 1
          </label>
        </div>
      </li>
      <li
        class="checkbox-field__item"
      >
        <div
          class="checkbox-field__item-control checkbox"
        >
          <span
            class="input__wrapper"
          >
            <input
              class="checkbox__input"
              data-bootstrap-override="checkbox"
              id="9"
              name="checkbox-example"
              style="--checkbox-svg-size: 1.25rem;"
              type="checkbox"
              value="checkbox2"
            />
            <svg
              aria-hidden="true"
              height="1.25rem"
              viewBox="0 0 20 20"
              width="1.25rem"
            >
              <rect
                class="checkmark__outline"
                fill="none"
                height="18"
                rx="3"
                stroke="currentColor"
                stroke-width="2"
                width="18"
                x="1"
                y="1"
              />
              <use
                class="checkmark__content"
                fill="none"
                xlink:href="test-file-stub#check"
              />
            </svg>
          </span>
          <label
            class="label label--md"
            data-bootstrap-override="label"
            for="9"
            style="--checkbox-svg-size: 1.25rem;"
          >
            Checkbox 2
          </label>
        </div>
      </li>
      <li
        class="checkbox-field__item"
      >
        <div
          class="checkbox-field__item-control checkbox"
        >
          <span
            class="input__wrapper"
          >
            <input
              class="checkbox__input"
              data-bootstrap-override="checkbox"
              id="11"
              name="checkbox-example"
              style="--checkbox-svg-size: 1.25rem;"
              type="checkbox"
              value="checkbox3"
            />
            <svg
              aria-hidden="true"
              height="1.25rem"
              viewBox="0 0 20 20"
              width="1.25rem"
            >
              <rect
                class="checkmark__outline"
                fill="none"
                height="18"
                rx="3"
                stroke="currentColor"
                stroke-width="2"
                width="18"
                x="1"
                y="1"
              />
              <use
                class="checkmark__content"
                fill="none"
                xlink:href="test-file-stub#check"
              />
            </svg>
          </span>
          <label
            class="label label--md"
            data-bootstrap-override="label"
            for="11"
            style="--checkbox-svg-size: 1.25rem;"
          >
            Checkbox 3
          </label>
        </div>
      </li>
    </ul>
  </div>
  <div
    aria-live="assertive"
    class="field-note checkbox-field__note"
    id="6"
  >
    Checkbox fieldset usage. See CheckboxField Stories for more examples.
  </div>
</fieldset>
`;

exports[`<Fieldset /> Default story renders snapshot 1`] = `
<fieldset
  class="fieldset"
>
  <legend
    class="fieldset-legend"
  >
    Legend
     
  </legend>
  <div
    class="fieldset-items"
  >
    <div
      class="checkbox"
    >
      <span
        class="input__wrapper"
      >
        <input
          class="checkbox__input"
          data-bootstrap-override="checkbox"
          id="1"
          style="--checkbox-svg-size: 1.25rem;"
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          height="1.25rem"
          viewBox="0 0 20 20"
          width="1.25rem"
        >
          <rect
            class="checkmark__outline"
            fill="none"
            height="18"
            rx="3"
            stroke="currentColor"
            stroke-width="2"
            width="18"
            x="1"
            y="1"
          />
          <use
            class="checkmark__content"
            fill="none"
            xlink:href="test-file-stub#check"
          />
        </svg>
      </span>
      <label
        class="label label--md"
        data-bootstrap-override="label"
        for="1"
        style="--checkbox-svg-size: 1.25rem;"
      >
        Checkbox label 1
      </label>
    </div>
    <div
      class="checkbox"
    >
      <span
        class="input__wrapper"
      >
        <input
          class="checkbox__input"
          data-bootstrap-override="checkbox"
          id="2"
          style="--checkbox-svg-size: 1.25rem;"
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          height="1.25rem"
          viewBox="0 0 20 20"
          width="1.25rem"
        >
          <rect
            class="checkmark__outline"
            fill="none"
            height="18"
            rx="3"
            stroke="currentColor"
            stroke-width="2"
            width="18"
            x="1"
            y="1"
          />
          <use
            class="checkmark__content"
            fill="none"
            xlink:href="test-file-stub#check"
          />
        </svg>
      </span>
      <label
        class="label label--md"
        data-bootstrap-override="label"
        for="2"
        style="--checkbox-svg-size: 1.25rem;"
      >
        Checkbox label 2
      </label>
    </div>
    <div
      class="checkbox"
    >
      <span
        class="input__wrapper"
      >
        <input
          class="checkbox__input"
          data-bootstrap-override="checkbox"
          id="3"
          style="--checkbox-svg-size: 1.25rem;"
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          height="1.25rem"
          viewBox="0 0 20 20"
          width="1.25rem"
        >
          <rect
            class="checkmark__outline"
            fill="none"
            height="18"
            rx="3"
            stroke="currentColor"
            stroke-width="2"
            width="18"
            x="1"
            y="1"
          />
          <use
            class="checkmark__content"
            fill="none"
            xlink:href="test-file-stub#check"
          />
        </svg>
      </span>
      <label
        class="label label--md"
        data-bootstrap-override="label"
        for="3"
        style="--checkbox-svg-size: 1.25rem;"
      >
        Checkbox label 3
      </label>
    </div>
    <div
      class="checkbox"
    >
      <span
        class="input__wrapper"
      >
        <input
          class="checkbox__input"
          data-bootstrap-override="checkbox"
          id="4"
          style="--checkbox-svg-size: 1.25rem;"
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          height="1.25rem"
          viewBox="0 0 20 20"
          width="1.25rem"
        >
          <rect
            class="checkmark__outline"
            fill="none"
            height="18"
            rx="3"
            stroke="currentColor"
            stroke-width="2"
            width="18"
            x="1"
            y="1"
          />
          <use
            class="checkmark__content"
            fill="none"
            xlink:href="test-file-stub#check"
          />
        </svg>
      </span>
      <label
        class="label label--md"
        data-bootstrap-override="label"
        for="4"
        style="--checkbox-svg-size: 1.25rem;"
      >
        Checkbox label 4
      </label>
    </div>
    <div
      class="checkbox"
    >
      <span
        class="input__wrapper"
      >
        <input
          class="checkbox__input"
          data-bootstrap-override="checkbox"
          id="5"
          style="--checkbox-svg-size: 1.25rem;"
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          height="1.25rem"
          viewBox="0 0 20 20"
          width="1.25rem"
        >
          <rect
            class="checkmark__outline"
            fill="none"
            height="18"
            rx="3"
            stroke="currentColor"
            stroke-width="2"
            width="18"
            x="1"
            y="1"
          />
          <use
            class="checkmark__content"
            fill="none"
            xlink:href="test-file-stub#check"
          />
        </svg>
      </span>
      <label
        class="label label--md"
        data-bootstrap-override="label"
        for="5"
        style="--checkbox-svg-size: 1.25rem;"
      >
        Checkbox label 5
      </label>
    </div>
  </div>
</fieldset>
`;

exports[`<Fieldset /> FieldsetLegends story renders snapshot 1`] = `
<legend
  class="fieldset-legend"
>
  Legend
   
</legend>
`;

exports[`<Fieldset /> RadioField story renders snapshot 1`] = `
<fieldset
  class="radio-field fieldset"
>
  <legend
    aria-describedby="13"
    class="fieldset-legend radio-field__label"
  >
    Radio field
     
  </legend>
  <div
    class="radio-field__body fieldset-items"
  >
    <ul
      class="radio-field__list"
    >
      <li
        class="radio-field__item"
      >
        <div
          class="radio radio-field__item-control"
        >
          <input
            class="radio__input"
            id="14"
            name="radio-example"
            type="radio"
            value="radio1"
          />
          <span
            class="radio__custom-radio"
          />
        </div>
        <label
          class="radio-field__item-label"
          for="14"
        >
          Radio 1
        </label>
      </li>
      <li
        class="radio-field__item"
      >
        <div
          class="radio radio-field__item-control"
        >
          <input
            class="radio__input"
            id="15"
            name="radio-example"
            type="radio"
            value="radio2"
          />
          <span
            class="radio__custom-radio"
          />
        </div>
        <label
          class="radio-field__item-label"
          for="15"
        >
          Radio 2
        </label>
      </li>
      <li
        class="radio-field__item"
      >
        <div
          class="radio radio-field__item-control"
        >
          <input
            class="radio__input"
            id="16"
            name="radio-example"
            type="radio"
            value="radio3"
          />
          <span
            class="radio__custom-radio"
          />
        </div>
        <label
          class="radio-field__item-label"
          for="16"
        >
          Radio 3
        </label>
      </li>
    </ul>
  </div>
  <div
    aria-live="assertive"
    class="field-note radio-field__note"
    id="13"
  >
    RadioField fieldset usage. See RadioField Stories for more examples.
  </div>
</fieldset>
`;
